# -*- eval: (cargo-minor-mode 1) -*-

[package]
name = "fmtparse"
version = "0.1.0"
edition = "2021"
description = "Parse format!-like strings"
keywords = ["fmt", "format", "format-string"]
categories = ["parser-implementations", "development-tools::procedural-macro-helpers"]
license = "EPL-2.0"
repository = "https://github.com/msrd0/fmtparse"
include = ["/src/**/*.rs", "/LICENSE"]

[dependencies]
chumsky = "0.9"

[dev-dependencies]
ariadne = "0.1"
